# piranesi

./: CITATION.bib  CITATION.cff  README.md  piranesi.py  pyproject.toml
doc/: README.md
