[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piranesi"
version = "1.0.0"
description = "Transform images using Piranesi's perspective quadrilateral mapping"
authors = [{name = "Bruno Postle", email = "bruno@postle.net"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
]
keywords = ["perspective", "veduta", "shell", "cli", "image", "transform", "geometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
piranesi = "piranesi:main"

[project.urls]
Homepage = "https://github.com/brunopostle/piranesi"
Repository = "https://github.com/brunopostle/piranesi"
Issues = "https://github.com/brunopostle/piranesi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
